# bare-xdiff

./: .gitignore  CMakeLists.txt  README.md  bench.js  binding.c  binding.js  index.js  package.json  test.js
.github/workflows/: prebuild.yml  test.yml
